[package]
name = "audio-raycast"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
textplots = "0.8.6"
crossterm = "0.28.1"
rustfft = "6.2.0"
num-complex = "0.4.6"
hound = "3.5.1"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
hrtf = "0.8.1"
rayon = "1.10.0"
apodize = "1.0.0"
fundsp = "0.20.0"
